--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bhagwati Clinic / भगवती क्लिनिक</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script
+      src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
+      type="module"
+    ></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
@@ -61,6 +65,10 @@
 
       .animate-pulse-slow {
         animation: pulse 4s ease infinite;
+      }
+
+      #successMessage {
+        transition: opacity 0.5s ease-out;
       }
 
       @keyframes float {
@@ -1286,66 +1294,114 @@
                 Quick Contact Form
               </h3>
 
+              <!-- Success Popup -->
+              <!-- Success Popup -->
+              <div
+                id="successPopup"
+                style="
+                  display: none;
+                  position: fixed;
+                  inset: 0;
+                  background: rgba(0, 0, 0, 0.5);
+                  justify-content: center;
+                  align-items: center;
+                  z-index: 1000;
+                "
+              >
+                <div
+                  style="
+                    background: white;
+                    padding: 5px 8px;
+                    border-radius: 16px;
+                    text-align: center;
+                    max-width: 320px;
+                    width: 100%;
+                    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+                  "
+                >
+                  <dotlottie-player
+                    src="https://lottie.host/8c963e6c-af69-42cd-a21e-c88a10cd9861/5u8hUsr7OB.lottie"
+                    background="transparent"
+                    speed="1"
+                    style="width: 300px; height: 300px; margin-bottom: 5px"
+                    loop
+                    autoplay
+                  ></dotlottie-player>
+                  <p
+                    style="
+                      color: green;
+                      font-weight: 700;
+                      font-size: 16px;
+                      margin: 0;
+                      user-select: none;
+                    "
+                  >
+                    Your message has been sent successfully!
+                  </p>
+                </div>
+              </div>
+
               <form
                 action="https://script.google.com/macros/s/AKfycbzjXMH-CJtJxiHVW1bofevhwSP6CAEGPMCPQ_3l9oa0Q8qbpFdULN7gqokQKmUrCygs/exec"
                 method="POST"
                 class="space-y-4"
                 target="_blank"
                 id="contactForm"
-                class="space-y-4"
+                onsubmit="return validateForm();"
               >
-                <!-- Name Field -->
+                <!-- Full Name -->
                 <div>
-                  <label for="Full Name" class="block text-gray-700 mb-1"
-                    >Full Name</label
+                  <label for="FullName" class="block text-gray-700 mb-1"
+                    >Full Name <span class="text-red-500">*</span></label
                   >
                   <input
                     type="text"
                     name="Full Name"
-                    id="Full Name"
+                    id="FullName"
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                     placeholder="Your Name"
-                    required
                   />
+                  <p class="text-red-500 text-sm mt-1" id="errorName"></p>
                 </div>
 
-                <!-- Phone Field -->
+                <!-- Phone Number -->
                 <div>
-                  <label for="Phone Number" class="block text-gray-700 mb-1"
-                    >Phone Number</label
+                  <label for="PhoneNumber" class="block text-gray-700 mb-1"
+                    >Phone Number <span class="text-red-500">*</span></label
                   >
                   <input
                     type="tel"
                     name="Phone Number"
-                    id="Phone Number"
+                    id="PhoneNumber"
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                     placeholder="+91 XXXXXXXXXX"
-                    required
                   />
+                  <p class="text-red-500 text-sm mt-1" id="errorPhone"></p>
                 </div>
 
-                <!-- Email Field -->
+                <!-- Email Address -->
                 <div>
-                  <label for="Email Address" class="block text-gray-700 mb-1"
+                  <label for="EmailAddress" class="block text-gray-700 mb-1"
                     >Email Address</label
                   >
                   <input
-                    type="email"
+                    type="text"
                     name="Email Address"
-                    id="Email Address"
+                    id="EmailAddress"
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                     placeholder="your@email.com"
                   />
+                  <p class="text-red-500 text-sm mt-1" id="errorEmail"></p>
                 </div>
 
-                <!-- Service Field -->
+                <!-- Service Needed -->
                 <div>
-                  <label for="Service Needed" class="block text-gray-700 mb-1"
-                    >Service Needed</label
+                  <label for="ServiceNeeded" class="block text-gray-700 mb-1"
+                    >Service Needed <span class="text-red-500">*</span></label
                   >
                   <select
                     name="Service Needed"
-                    id="Service Needed"
+                    id="ServiceNeeded"
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                   >
                     <option value="">Select a service</option>
@@ -1360,12 +1416,13 @@
                     <option value="Emergency Care">Emergency Care</option>
                     <option value="Other">Other</option>
                   </select>
+                  <p class="text-red-500 text-sm mt-1" id="errorService"></p>
                 </div>
 
-                <!-- Message Field -->
+                <!-- Message -->
                 <div>
                   <label for="Message" class="block text-gray-700 mb-1"
-                    >Message</label
+                    >Message <span class="text-red-500">*</span></label
                   >
                   <textarea
                     name="Message"
@@ -1374,6 +1431,7 @@
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                     placeholder="Your message or appointment request"
                   ></textarea>
+                  <p class="text-red-500 text-sm mt-1" id="errorMessage"></p>
                 </div>
 
                 <button
@@ -1383,6 +1441,7 @@
                   Send Message <i class="fas fa-paper-plane ml-2"></i>
                 </button>
               </form>
+
               <div
                 id="successMessage"
                 class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
@@ -1625,28 +1684,28 @@
       // Mobile menu toggle
       document
         .getElementById("menu-toggle")
-        .addEventListener("click", function () {
+        ?.addEventListener("click", function () {
           const menu = document.getElementById("mobile-menu");
           menu.classList.toggle("open");
         });
 
-      // Smooth scrolling for all links
+      // Smooth scrolling
       document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
         anchor.addEventListener("click", function (e) {
           e.preventDefault();
-          document.querySelector(this.getAttribute("href")).scrollIntoView({
-            behavior: "smooth",
-          });
+          document
+            .querySelector(this.getAttribute("href"))
+            .scrollIntoView({ behavior: "smooth" });
         });
       });
 
-      // Back to top button visibility
+      // Back to top button
       window.addEventListener("scroll", function () {
         const backToTopButton = document.getElementById("back-to-top");
         if (window.pageYOffset > 300) {
-          backToTopButton.classList.add("show");
+          backToTopButton?.classList.add("show");
         } else {
-          backToTopButton.classList.remove("show");
+          backToTopButton?.classList.remove("show");
         }
       });
 
@@ -1658,7 +1717,6 @@
       function showSlide(n) {
         slides.forEach((slide) => slide.classList.remove("active"));
         dots.forEach((dot) => dot.classList.remove("active"));
-
         currentSlide = (n + slides.length) % slides.length;
         slides[currentSlide].classList.add("active");
         dots[currentSlide].classList.add("active");
@@ -1668,20 +1726,130 @@
         dot.addEventListener("click", () => showSlide(index));
       });
 
-      // Auto-rotate testimonials
       setInterval(() => {
         showSlide(currentSlide + 1);
       }, 5000);
 
-      // Initialize first slide
       showSlide(0);
 
-      // Enhanced submission handling
+      // Helper for showing/hiding error
+      function setError(id, message) {
+        const errorEl = document.getElementById(id);
+        const inputEl = document.getElementById(id.replace("error", ""));
+        if (message) {
+          errorEl.textContent = message;
+          inputEl.classList.add("border-red-500");
+        } else {
+          errorEl.textContent = "";
+          inputEl.classList.remove("border-red-500");
+        }
+      }
+
+      // Validate individual fields on input/change
+      function attachFieldValidation() {
+        document
+          .getElementById("FullName")
+          .addEventListener("input", function () {
+            setError(
+              "errorName",
+              this.value.trim() === "" ? "Please enter your name." : ""
+            );
+          });
+
+        document
+          .getElementById("PhoneNumber")
+          .addEventListener("input", function () {
+            const phonePattern = /^(\+91[\-\s]?)?[6-9]\d{9}$/;
+            setError(
+              "errorPhone",
+              !phonePattern.test(this.value.trim())
+                ? "Enter valid 10-digit Indian number."
+                : ""
+            );
+          });
+
+        document
+          .getElementById("EmailAddress")
+          .addEventListener("input", function () {
+            const email = this.value.trim();
+            const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            setError(
+              "errorEmail",
+              email !== "" && !emailPattern.test(email)
+                ? "Enter a valid email address."
+                : ""
+            );
+          });
+
+        document
+          .getElementById("ServiceNeeded")
+          .addEventListener("change", function () {
+            setError(
+              "errorService",
+              this.value === "" ? "Please select a service." : ""
+            );
+          });
+
+        document
+          .getElementById("Message")
+          .addEventListener("input", function () {
+            setError(
+              "errorMessage",
+              this.value.trim() === "" ? "Please enter a message." : ""
+            );
+          });
+      }
+
+      // Final validation before submit
+      function validateForm() {
+        let isValid = true;
+
+        const name = document.getElementById("FullName").value.trim();
+        const phone = document.getElementById("PhoneNumber").value.trim();
+        const email = document.getElementById("EmailAddress").value.trim();
+        const service = document.getElementById("ServiceNeeded").value.trim();
+        const message = document.getElementById("Message").value.trim();
+
+        const phonePattern = /^(\+91[\-\s]?)?[6-9]\d{9}$/;
+        const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
+        if (name === "") {
+          setError("errorName", "Please enter your name.");
+          isValid = false;
+        }
+
+        if (!phonePattern.test(phone)) {
+          setError("errorPhone", "Enter valid 10-digit Indian number.");
+          isValid = false;
+        }
+
+        if (email !== "" && !emailPattern.test(email)) {
+          setError("errorEmail", "Enter a valid email address.");
+          isValid = false;
+        }
+
+        if (service === "") {
+          setError("errorService", "Please select a service.");
+          isValid = false;
+        }
+
+        if (message === "") {
+          setError("errorMessage", "Please enter a message.");
+          isValid = false;
+        }
+
+        return isValid;
+      }
+
+      // Form submission handler
       document.addEventListener("DOMContentLoaded", function () {
+        attachFieldValidation();
+
         document
           .getElementById("contactForm")
           .addEventListener("submit", function (e) {
             e.preventDefault();
+            if (!validateForm()) return;
 
             const form = this;
             const formData = new FormData(form);
@@ -1706,11 +1874,24 @@
               .then((response) => response.json())
               .then((respData) => {
                 if (respData.status === "success") {
-                  const successDiv = document.getElementById("successMessage");
-                  if (successDiv) {
-                    successDiv.classList.remove("hidden");
-                  }
+                  const successPopup = document.getElementById("successPopup");
+                  successPopup.style.display = "flex";
+
+                  // Disable form fields
+                  form
+                    .querySelectorAll("input, select, textarea, button")
+                    .forEach((el) => (el.disabled = true));
+
+                  // Reset form
                   form.reset();
+
+                  // Hide popup after 1 second and re-enable form
+                  setTimeout(() => {
+                    successPopup.style.display = "none";
+                    form
+                      .querySelectorAll("input, select, textarea, button")
+                      .forEach((el) => (el.disabled = false));
+                  }, 3000);
                 } else {
                   alert("Error submitting form: " + respData.message);
                 }
@@ -1720,6 +1901,7 @@
                 console.error(error);
               })
               .finally(() => {
+                const submitBtn = form.querySelector('button[type="submit"]');
                 submitBtn.disabled = false;
                 submitBtn.innerHTML =
                   'Send Message <i class="fas fa-paper-plane ml-2"></i>';
