--- a/index.html
+++ b/index.html
@@ -1267,7 +1267,7 @@
                   <i class="fab fa-facebook-f"></i>
                 </a>
                 <a
-                  href="#"
+                  href="https://www.instagram.com/_maniii_maniii_/?hl=en"
                   class="bg-blue-100 text-blue-600 hover:bg-blue-200 w-10 h-10 rounded-full flex items-center justify-center transition"
                 >
                   <i class="fab fa-instagram"></i>
