--- a/index.html
+++ b/index.html
@@ -1640,7 +1640,7 @@
               <li class="flex items-start">
                 <i class="fas fa-map-marker-alt text-gray-400 mt-1 mr-3"></i>
                 <span class="text-gray-400"
-                  >Sai Nargi Devi Complex, Bypass-155, Noida</span
+                  >Chowki Ganeshi Chechi Market, Sector-155 Near ISKCON Temple, Noida, Gautam Buddha Nagar (U.P.)</span
                 >
               </li>
               <li class="flex items-start">
