--- a/index.html
+++ b/index.html
@@ -1541,7 +1541,7 @@
               <a href="#" class="text-gray-400 hover:text-white transition">
                 <i class="fab fa-twitter"></i>
               </a>
-              <a href="#" class="text-gray-400 hover:text-white transition">
+              <a href="https://www.instagram.com/_maniii_maniii_/?hl=en" class="text-gray-400 hover:text-white transition">
                 <i class="fab fa-instagram"></i>
               </a>
               <a href="#" class="text-gray-400 hover:text-white transition">
